Fix T56996: MacOS: Lagging when rotating the view

It happens on multiple configuration so we cannot isolate the fix to only
some config.

Thanks Hugo Lamarche for helping finding the fix.